--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React Redux App</title>
+  <title>Blog App</title>
   <link rel="stylesheet" href="font-icons.css">
 </head>
 
